--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ProjektGit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,9 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "password-hash": "^1.2.2",
-    "sqlite3": "^4.0.2"
+    "sqlite3": "^4.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
