--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "node": "^11.2.0",
     "password-hash": "^1.2.2",
     "save": "^2.3.2",
     "sqlite3": "^4.0.3"
