Navbar: -anpassung -logout

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "ProjektGit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,13 +22,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jquery": "^3.3.1",
-    "node": "^11.2.0",
     "password-hash": "^1.2.2",
-    "save": "^2.3.2",
-    "sqlite3": "^4.0.3"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.6"
+    "sqlite3": "^4.0.2"
   }
 }
